fix: fixed alignments

--- a/src/components/VerticalSection/styles.scss
+++ b/src/components/VerticalSection/styles.scss
@@ -5,7 +5,7 @@
 }
 
 .rainbow-vertical-section_title {
-    padding: 0.5rem 0.5rem 0.5rem 1rem;
+    padding: 0.5rem 0.5rem 0.5rem 1.25rem;
     line-height: 1.5rem;
     font-size: 0.9375rem;
     color: $color-brand;
