--- a/src/components/VerticalSectionOverflow/styles.scss
+++ b/src/components/VerticalSectionOverflow/styles.scss
@@ -12,8 +12,8 @@
 .rainbow-vertical-section-overflow_container {
     @include animation-properties(all 0.45s cubic-bezier(0.23, 1, 0.32, 1) 0ms);
 
-    .rainbow-nav-vertical__action {
-        padding: 0.75rem 0.5rem 0.75rem 2.875rem;
+    .rainbow-vertical-item_action {
+        padding: 0.5rem 1rem 0.5rem 3rem;
     }
 }
 
@@ -27,7 +27,7 @@
     border: 0;
     display: -ms-flexbox;
     display: flex;
-    padding: 1rem 1rem 1rem 2rem;
+    padding: 1rem 1rem 1rem 1.25rem;
     border-radius: 0;
     color: $color-gray-4;
     font-size: $font-size-text-medium;
@@ -52,7 +52,7 @@
 }
 
 .rainbow-vertical-section-overflow_button--expanded {
-    padding: 1rem 1rem 0 2rem;
+    padding-bottom: 0;
 }
 
 .rainbow-vertical-section-overflow--show {
@@ -73,10 +73,6 @@
         opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1),
         max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1)
     ));
-}
-
-.rainbow-vertical-item_action {
-    padding: 0.5rem 0.5rem 0.5rem 3.5rem;
 }
 
 .rainbow-vertical-item_icon {
